[build-system]
requires = ["setuptools>=69.0.0", "wheel>=0.42.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mta-alumni-linkedin-scraping"
version = "1.0.0"
description = "Dynamically scraping LinkedIn for Mount Allison University alumni data using Selenium."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Luis M. B. Varona", email = "lm.varona@outlook.com" },
]
maintainers = [
    { name = "Luis M. B. Varona", email = "lm.varona@outlook.com" },
]
dependencies =["bs4>=0.0.2", "polars>=0.20.0", "selenium>=4.16.0"]
keywords = ["web scraping", "dynamic scraping", "selenium"]

[project.urls]
Repository = "https://github.com/Luis-Varona/mta-alumni-linkedin-scraping"

[project.optional-dependencies]
static-analysis = ["mypy", "ruff"]

[tool.mypy]
disable_error_code = ["import-untyped"]
